--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="LogoutBtn">Log Out</string>
     <string name="title_activity_signup">signupActivity</string>
     <string name="title_activity_forgot_pass">forgotPass</string>
+    <string name="title_activity_profile_pic">profilePic</string>
 </resources>
