--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="title_activity_forgot_pass">forgotPass</string>
     <string name="title_activity_profile_pic">profilePic</string>
     <string name="title_activity_checking">checking</string>
+    <string name="title_activity_user_profile">userProfile</string>
 </resources>
