--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="title_activity_profile_pic">profilePic</string>
     <string name="title_activity_checking">checking</string>
     <string name="title_activity_user_profile">userProfile</string>
+    <string name="title_activity_preferences">Preferences</string>
 </resources>
