--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,34 @@
     <string name="app_name">WhatsPlaying</string>
     <string name="title_activity_main">MainActivity</string>
 
-    <string name="hello_world">Hello world!</string>
+    may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+    -->
+
+
+        <string name="drawer_open">Open navigation drawer</string>
+        <string name="drawer_close">Close navigation drawer</string>
+
+
+        <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_sec">SecActivity</string>
     <string name="title_activity_third">thirdAct</string>
     <string name="title_activity_fouract">fouract</string>
     <string name="title_activity_central">central</string>
+
+    <string-array name="drawer_titles">
+        <item>Tabs</item>
+        <item>WebView</item>
+    </string-array>
 
 
     <string name="title_section1">Section 1</string>
@@ -94,4 +116,5 @@
     <string name="title_activity_checking">checking</string>
     <string name="title_activity_user_profile">userProfile</string>
     <string name="title_activity_preferences">Preferences</string>
+    <string name="title_activity_play_song">playSong</string>
 </resources>
